--- a/public/views/game-info.html
+++ b/public/views/game-info.html
@@ -1,85 +1,79 @@
 <div ng-include="'/views/navbar.html'"></div>
 
 <div ng-controller="GameInfoController as vm">
-    
+
     <div class="container container-bg" ng-if="vm.show">
-        
+
         <section>
-            <h2 class="page-header"><strong>{{vm.gameXA.title}}</strong></h2>
-                    
             <div class="row">
-                <div class="col-sm-6">
+                <div class="col-md-6">
+                    <h2 class="page-header"><strong>{{vm.gameXA.title}}</strong></h2>
+
                     <div class="media">
-                <div class="media-left">
-                    <a target="_blank" href="{{vm.gameXA.imageUrl}}">
-                        <img class="media-object" src="{{vm.gameXA.imageUrl}}" width="150px;"/>
-                    </a>
+                        <div class="media-left">
+                            <a target="_blank" href="{{vm.gameXA.artworkUrl}}">
+                                <img class="media-object" src="{{vm.gameXA.artworkUrl}}" width="150px;"/>
+                            </a>
+                        </div>
+                        <div class="media-body">
+                            <h4 class="media-heading" ng-bind="vm.gameXA.title"></h4>
+                            <span><strong>Game Id: </strong>{{vm.gameXA.title}}</span><br/>
+                            <span ng-if="vm.gameParse.objectId"><strong>Parse Id: </strong>{{vm.gameParse.objectId}}<br/></span>
+                            <span ng-if="vm.gameParse.gbGameId"><strong>Giant Bomb Id: </strong>{{vm.gameParse.gbGameId}}<br/></span>
+                            <span><strong>Developer: </strong>{{vm.gameXA.developer}}</span><br/>
+                            <span><strong>Publisher: </strong>{{vm.gameXA.publisher}}</span><br/>
+                            <span><strong>Genre: </strong>{{vm.gameXA.genre}}</span><br/>
+                            <span><strong>Achievements Total: </strong>{{vm.gameXA.achievements.length}}</span><br/>
+                            <span><strong>Game in Parse: </strong>{{vm.isGameInParse() ? 'Linked to Parse: ' : 'Not Linked to Parse: '}}</span>
+                            <span class="text-primary" ng-class="vm.isGameInParse() ? 'fa fa-link' : 'fa fa-chain-broken'"></span><br/>
+                            <span ng-if="vm.gameXA.description"><strong>Description: </strong>{{vm.gameXA.description}}<br></span>
+                            <a target="_blank" href="http://www.xboxachievements.com/game/{{vm.gameXA.permalink}}/achievements/">XBA Link</a>
+                        </div>
+                    </div>
+
+                    <div class="btn-group" role="group" style="margin-top: 20px;">
+                        <button type="button" class="btn btn-default"
+                                ng-if="!vm.isGameInParse()"
+                                ng-disabled="!vm.doneGettingGbData && !vm.gameXA.bannerUrl"
+                                ng-click="vm.addGameInfoToParse(vm.gameXA)">Add Game Info to Parse
+                        </button>
+                        <button type="button" class="btn btn-default"
+                                ng-if="vm.isGameInParse()"
+                                ng-disabled="vm.isGameAchievementsUpToDate()"
+                                ng-click="vm.updateAchievements(vm.gameXA)">Add Achievements to Parse
+                        </button>
+                    </div>
                 </div>
-                <div class="media-body">
-                    <h4 class="media-heading" ng-bind="vm.gameXA.title"></h4>
-                    <span><strong>Game Id: </strong>{{vm.gameXA.title}}</span><br/>
-                    <span ng-if="vm.gameParse.objectId"><strong>Parse Id: </strong>{{vm.gameParse.objectId}}<br/></span>
-                    <span ng-if="vm.gameParse.gbGameId"><strong>Giant Bomb Id: </strong>{{vm.gameParse.gbGameId}}<br/></span>
-                    <span><strong>Developer: </strong>{{vm.gameXA.developer}}</span><br/>
-                    <span><strong>Publisher: </strong>{{vm.gameXA.publisher}}</span><br/>
-                    <span><strong>Genre: </strong>{{vm.gameXA.genre}}</span><br/>
-                    <span><strong>Achievements Total: </strong>{{vm.gameXA.achievements.length}}</span><br/>
-                    <span><strong>Game in Parse: </strong>{{vm.isGameInParse() ? 'Linked to Parse: ' : 'Not Linked to Parse: '}}</span>
-                    <span class="text-primary" ng-class="vm.isGameInParse() ? 'fa fa-link' : 'fa fa-chain-broken'"></span><br/>
-                    <a target="_blank" href="http://www.xboxachievements.com/game/{{vm.gameXA.permalink}}/achievements/">XBA Link</a> 
-                </div>
-            </div>
-                </div>
-                <div class="col-sm-6">
-                    <div class="media">
-                <div class="media-left">
-                    <a target="_blank" href="{{vm.gameParse.coverImageUrl}}">
-                        <img class="media-object" src="{{vm.gameParse.coverImageUrl}}" width="150px;"/>
-                    </a>
-                </div>
-                <div class="media-body">
-                    <h4 class="media-heading" ng-bind="vm.gameParse.title"></h4>
-                    <span><strong>Game Id: </strong>{{vm.gameParse.title}}</span><br/>
-                    <span ng-if="vm.gameParse.objectId"><strong>Parse Id: </strong>{{vm.gameParse.objectId}}<br/></span>
-                    <span ng-if="vm.gameParse.gbGameId"><strong>Giant Bomb Id: </strong>{{vm.gameParse.gbGameId}}<br/></span>
-                    <span><strong>Developer: </strong>{{vm.gameParse.developer}}</span><br/>
-                    <span><strong>Publisher: </strong>{{vm.gameParse.publisher}}</span><br/>
-                    <span><strong>Genre: </strong>{{vm.gameParse.genre}}</span><br/>
-                    <span><strong>Achievements Total: </strong>{{vm.gameParse.achievementCount}}</span><br/>
-                </div>
-            </div>
-                </div>
-            </div>
-            
-            
-            
-            <div ng-if="!vm.isGameInParse()">
-                <label>Giant Bomb Game Id</label>
-                <div class="input-group">
-                    <input type="number" class="form-control" placeholder="Giant Bomb Game Id" ng-model="vm.gameParse.gbGameId">
+
+                <div class="col-md-6" ng-if="!vm.isGameInParse()">
+                    <h2 class="page-header"><strong>Extras</strong></h2>
+
+                    <div  style="margin-top: 20px;">
+                        <label>Giant Bomb Game Id</label>
+
+                        <div class="input-group" style="max-width: 240px">
+                            <input type="number" class="form-control" placeholder="Giant Bomb Id" ng-model="vm.gameParse.gbGameId" min="0">
                       <span class="input-group-btn">
-                        <button class="btn btn-default" type="button" ng-click="vm.getGiantBombData()" ng-disabled="vm.isGameInParse() || !vm.gameParse.gbGameId">Get Data</button>
+                        <button class="btn btn-default" type="button" ng-click="vm.getGiantBombData()" ng-disabled="vm.isGameInParse() || !vm.gameParse.gbGameId">
+                            Get Data
+                        </button>
                       </span>
+                        </div>
+
+                        <div ng-if="vm.doneGettingGbData && !vm.isGameInParse()" style="max-width: 240px; margin-top: 10px;">
+                            <label>Game Cover</label>
+                            <input type="text" class="form-control" placeholder="Game Banner Required" ng-model="vm.gameXA.bannerUrl"><br>
+                            <img class="img-responsive" ng-src="{{vm.gameXA.bannerUrl}}"/>
+                        </div>
+                    </div>
                 </div>
-                <br>
+
             </div>
-            
-            <div class="btn-group" role="group" style="margin-top: 20px;">
-                <button type="button" class="btn btn-default"
-                        ng-if="!vm.isGameInParse()"
-                        ng-click="vm.addGameInfoToParse(vm.gameInfo)">Add Game Info to Parse
-                </button>
-                <button type="button" class="btn btn-default"
-                        ng-disabled="!vm.isGameInParse() || vm.isGameAchievementsUpToDate()"
-                        ng-click="vm.uploadAllAchievements()">Add Achievements to Parse
-                </button>
-            </div>
-            
         </section>
-        
+
         <section>
             <h2 class="page-header">Achievements</h2>
-    
+
             <div class="table-responsive hidden-sm hidden-xs">
                 <table class="table table-striped table-condensed">
                     <thead>
@@ -92,7 +86,7 @@
                     </thead>
                     <tbody>
                     <tr ng-repeat="ach in vm.gameXA.achievements">
-                        <td><img width="150px;" class="" src="{{ach.imageUrl}}"/></td>
+                        <td><img width="150px;" class="" src="{{ach.artworkUrl}}"/></td>
                         <td>
                             <span class="text-bold text-primary">{{ach.title}}</span><br/>
                             <span>{{ach.description}}</span>
@@ -101,30 +95,33 @@
                             {{ach.achievementId}}
                         </td>
                         <td>
-                            <span class="text-primary" ng-class="ach.inParse ? 'fa fa-link' : 'fa fa-chain-broken'"></span>
+                            <span class="text-primary"
+                                  ng-class="ach.inParse ? 'fa fa-link' : 'fa fa-chain-broken'"></span>
                         </td>
                     </tr>
                     </tbody>
                 </table>
             </div>
-    
+
             <div class="row visible-sm visible-xs">
                 <div class="col-md-4 col-sm-6" ng-repeat="ach in vm.gameXA.achievements">
                     <div class="achievement-wrapper">
-                        <img class="img-responsive" src="{{ach.imageUrl}}" alt="Cover">
-    
+                        <img class="img-responsive" src="{{ach.artworkUrl}}" alt="Cover">
+
                         <div class="gradient">
                             <h4 class="media-heading">{{ach.title}} - <span
-                                    ng-class="ach.inParse ? 'fa fa-link text-primary' : 'fa fa-chain-broken'"></span></h4>
-    
+                                    ng-class="ach.inParse ? 'fa fa-link text-primary' : 'fa fa-chain-broken'"></span>
+                            </h4>
+
                             <p ng-bind="ach.description"></p>
                         </div>
                     </div>
                 </div>
             </div>
-            
+
         </section>
     </div>
+
     <!--<div class="container container-bg" ng-if="vm.gameInfoChecked && vm.gameAchievementsChecked">-->
 
     <!--    <div class="row">-->
