--- a/public/css/style.less
+++ b/public/css/style.less
@@ -1,7 +1,6 @@
-@import 'navbar';
-@import "global";
+@import 'navbar.less';
+@import 'global.less';
 
 body {
-  font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  background-color: @body-bg;
+  font-family: @roboto;
 }
