--- a/public/css/variables.less
+++ b/public/css/variables.less
@@ -1,3 +1,13 @@
-@navbar-bg: #e74c3c;
-@navbar-height: 70px;
-@body-bg: #fafafa;
+// imports
+@import url(//fonts.googleapis.com/css?family=Roboto:400,100,100italic,900italic,900,700italic,500italic,700,500,400italic,300,300italic);
+
+// fonts
+@roboto: 'Roboto', sans-serif;
+@lato: 'lato', sans-serif;
+
+
+// color
+@PRIMARY_COLOR: #097c9c;
+@SECONDARY_COLOR: #9425f2;
+@ACCENT_COLOR: #f9d406;
+@font-color-light: #f2f2f2;
