--- a/public/css/global.less
+++ b/public/css/global.less
@@ -1,4 +1,4 @@
-@import "variables";
+@import "variables.l";
 
 .alert {
   border-radius: 0;
@@ -65,5 +65,17 @@
   li {
     display: inline-block;
     padding: 5px;
+  }
+}
+
+.btn-relos-trans {
+  background-color: rgba(0,0,0,0);
+  border: 2px solid @ACCENT_COLOR;
+  color: @ACCENT_COLOR;
+  
+  &:hover {
+    color: darken(@ACCENT_COLOR, 10%);    
+    border: 2px solid darken(@ACCENT_COLOR, 10%);
+
   }
 }
