--- a/public/views/navbar.html
+++ b/public/views/navbar.html
@@ -1,9 +1,12 @@
 <div ng-controller="NavbarController as vm">
-    <nav class="navi container">
-        <ul>
-            <li><a href="/dashboard">Dashboard</a></li>
-            <li><a href="/browse">Browse</a></li>
-            <li><a href="" target="_self" ng-click="vm.logout()">Logout</a></li>
-        </ul>
-    </nav>
+    <header class="navigation-bar">
+      <div class="navigation-brand">
+        <a href="#">
+          <span class="navigation-brand-title animated fadeIn">releet</span>
+        </a>
+      </div>
+      <span class="navigation-menu-icon animated fadeIn">
+        <i class="glyphicon glyphicon-option-vertical"></i>
+      </span>
+    </header>
 </div>
