--- a/public/css/variables.less
+++ b/public/css/variables.less
@@ -1,13 +1,23 @@
-// imports
-@import url(//fonts.googleapis.com/css?family=Roboto:400,100,100italic,900italic,900,700italic,500italic,700,500,400italic,300,300italic);
-
 // fonts
 @roboto: 'Roboto', sans-serif;
 @lato: 'lato', sans-serif;
 
+// font size
+@font-size-tiny: 10px;
+@font-size-small: 12px;
+@font-size-regular: 16px;
+@font-size-semi-large: 20px;
+@font-size-x-large: 30px;
+@font-size-huge: 50px;
+
 
 // color
-@PRIMARY_COLOR: #097c9c;
-@SECONDARY_COLOR: #9425f2;
-@ACCENT_COLOR: #f9d406;
+@primary-color: #097c9c;
+@accent-color: #f9d406;
 @font-color-light: #f2f2f2;
+@font-color-accent: @accent-color;
+@font-color-dark: #121212;
+
+
+// height
+@height-navigation-bar: 70px;
