--- a/public/css/style.less
+++ b/public/css/style.less
@@ -1,6 +1,15 @@
 @import 'navbar.less';
 @import 'global.less';
+@import 'home.less';
+
+html, body {
+  min-height: 100vh;
+  padding: 0;
+  margin: 0;
+}
 
 body {
   font-family: @roboto;
+  font-weight: 300;
+  font-size: @font-size-regular;
 }
