--- a/public/css/style.css
+++ b/public/css/style.css
@@ -135,6 +135,26 @@ form {
   display: inline-block;
   padding: 5px;
 }
+input {
+  width: 100%;
+  margin-bottom: 10px;
+  background: rgba(0, 0, 0, 0);
+  outline: none;
+  padding: 10px;
+  font-size: 12px;
+  color: #f9d406;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  border-radius: 5px;
+  box-shadow: inset 0 -5px 45px rgba(100, 100, 100, 0.2), 0 1px 1px rgba(255, 255, 255, 0.2);
+  -webkit-transition: box-shadow 0.5s ease;
+  -moz-transition: box-shadow 0.5s ease;
+  -o-transition: box-shadow 0.5s ease;
+  transition: box-shadow 0.5s ease;
+}
+input:focus {
+  box-shadow: inset 0 -5px 45px rgba(100, 100, 100, 0.4), 0 1px 1px rgba(255, 255, 255, 0.2);
+}
 .btn-relos-trans-accent {
   background-color: rgba(0, 0, 0, 0);
   border: 1px solid #f9d406;
