Working in login page.

--- a/public/css/global.less
+++ b/public/css/global.less
@@ -10,9 +10,6 @@ a {
   }
 }
 
-form {
-  max-width: 240px;
-}
 
 
 
@@ -67,12 +64,6 @@ form {
   font-size: @font-size-huge;
 }
 
-.login-wrapper {
-  input.form-control {
-    margin-bottom: 10px;
-  }
-}
-
 .browse-alphabetic {
   padding: 0;
   text-align: center;
@@ -83,27 +74,27 @@ form {
   }
 }
 
-input {
-  width: 100%;
-  margin-bottom: 10px;
-  background: rgba(0,0,0,0);
-  outline: none;
-  padding: 10px;
-  font-size: @font-size-small;
-  color: @accent-color;
-  text-shadow: 1px 1px 1px rgba(0,0,0,0.2);
-  border: 1px solid rgba(0,0,0,0.2);
-  border-radius: 5px;
-  box-shadow: inset 0 -5px 45px rgba(100,100,100,0.2), 0 1px 1px rgba(255,255,255,0.2);
-  -webkit-transition: box-shadow .5s ease;
-  -moz-transition: box-shadow .5s ease;
-  -o-transition: box-shadow .5s ease;
-  transition: box-shadow .5s ease;
-
-  &:focus {
-    box-shadow: inset 0 -5px 45px rgba(100,100,100,0.2), 0 1px 1px rgba(255,255,255,0.2);
-  }
-}
+//input {
+//  width: 100%;
+//  margin-bottom: 10px;
+//  background: rgba(0,0,0,0);
+//  outline: none;
+//  padding: 10px;
+//  font-size: @font-size-small;
+//  color: @accent-color;
+//  text-shadow: 1px 1px 1px rgba(0,0,0,0.2);
+//  border: 1px solid rgba(0,0,0,0.2);
+//  border-radius: 5px;
+//  box-shadow: inset 0 -5px 45px rgba(100,100,100,0.2), 0 1px 1px rgba(255,255,255,0.2);
+//  -webkit-transition: box-shadow .5s ease;
+//  -moz-transition: box-shadow .5s ease;
+//  -o-transition: box-shadow .5s ease;
+//  transition: box-shadow .5s ease;
+//
+//  &:focus {
+//    box-shadow: inset 0 -5px 45px rgba(100,100,100,0.2), 0 1px 1px rgba(255,255,255,0.2);
+//  }
+//}
 
 .btn-relos-trans-accent {
   background-color: rgba(0,0,0,0);
