--- a/public/views/index.html
+++ b/public/views/index.html
@@ -13,6 +13,8 @@
 
     <link rel="stylesheet" href="/scripts/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.css">
+    <link rel="stylesheet" href="/lib/pe-icon-7-stroke/css/pe-icon-7-stroke.css"/>
+    <link rel="stylesheet" href="/lib/pe-icon-7-stroke/css/helper.css"/>
     <link rel="stylesheet" href="/css/animate.css"/>
     <link rel="stylesheet" href="/scripts/angular-loading-bar/build/loading-bar.css"/>
     <link rel="stylesheet" href="/css/style.css"/>
