--- a/public/css/home.less
+++ b/public/css/home.less
@@ -26,5 +26,53 @@
       margin: 0;
       text-align: center;
     }
+
+    form {
+      min-width: 280px;
+
+      .email-input {
+        background-color: rgba(0,0,0,0.07);
+        border: 1px solid @accent-color;
+        border-radius: 4px;
+        margin-bottom: 10px;
+
+        &:hover {
+          input {
+            width: 80%;
+
+
+          }
+        }
+
+        input {
+          background-color: rgba(0,0,0,0.2);
+          border: none;
+          color: @font-color-accent;
+          font-size: @font-size-regular;
+          padding: 8px;
+          border-right: 1px solid @accent-color;
+          box-shadow: none;
+          outline: none;
+          width: 0;
+
+          -webkit-transition: all 0.2s;
+          -moz-transition: all 0.2s;
+          -ms-transition: all 0.2s;
+          -o-transition: all 0.2s;
+          transition: all 0.2s;
+
+          &:focus, &:active {
+            width: 235px;
+          }
+        }
+
+        i {
+          color: @font-color-accent;
+          padding: 8px;
+          text-align: center;
+          width: 10%;
+        }
+      }
+    }
   }
 }
