--- a/public/css/style.css
+++ b/public/css/style.css
@@ -85,9 +85,6 @@ a:hover {
   color: #f9d406;
   text-decoration: none;
 }
-form {
-  max-width: 240px;
-}
 .achievement-wrapper {
   position: relative;
   margin-bottom: 20px;
@@ -124,9 +121,6 @@ form {
 .text-size-huge {
   font-size: 50px;
 }
-.login-wrapper input.form-control {
-  margin-bottom: 10px;
-}
 .browse-alphabetic {
   padding: 0;
   text-align: center;
@@ -134,26 +128,6 @@ form {
 .browse-alphabetic li {
   display: inline-block;
   padding: 5px;
-}
-input {
-  width: 100%;
-  margin-bottom: 10px;
-  background: rgba(0, 0, 0, 0);
-  outline: none;
-  padding: 10px;
-  font-size: 12px;
-  color: #f9d406;
-  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
-  border: 1px solid rgba(0, 0, 0, 0.2);
-  border-radius: 5px;
-  box-shadow: inset 0 -5px 45px rgba(100, 100, 100, 0.2), 0 1px 1px rgba(255, 255, 255, 0.2);
-  -webkit-transition: box-shadow 0.5s ease;
-  -moz-transition: box-shadow 0.5s ease;
-  -o-transition: box-shadow 0.5s ease;
-  transition: box-shadow 0.5s ease;
-}
-input:focus {
-  box-shadow: inset 0 -5px 45px rgba(100, 100, 100, 0.2), 0 1px 1px rgba(255, 255, 255, 0.2);
 }
 .btn-relos-trans-accent {
   background-color: rgba(0, 0, 0, 0);
@@ -188,6 +162,44 @@ input:focus {
   padding: 0;
   margin: 0;
   text-align: center;
+}
+#home-wrapper .login-wrapper form {
+  min-width: 280px;
+}
+#home-wrapper .login-wrapper form .email-input {
+  background-color: rgba(0, 0, 0, 0.07);
+  border: 1px solid #f9d406;
+  border-radius: 4px;
+  margin-bottom: 10px;
+}
+#home-wrapper .login-wrapper form .email-input:hover input {
+  width: 80%;
+}
+#home-wrapper .login-wrapper form .email-input input {
+  background-color: rgba(0, 0, 0, 0.2);
+  border: none;
+  color: #f9d406;
+  font-size: 16px;
+  padding: 8px;
+  border-right: 1px solid #f9d406;
+  box-shadow: none;
+  outline: none;
+  width: 0;
+  -webkit-transition: all 0.2s;
+  -moz-transition: all 0.2s;
+  -ms-transition: all 0.2s;
+  -o-transition: all 0.2s;
+  transition: all 0.2s;
+}
+#home-wrapper .login-wrapper form .email-input input:focus,
+#home-wrapper .login-wrapper form .email-input input:active {
+  width: 235px;
+}
+#home-wrapper .login-wrapper form .email-input i {
+  color: #f9d406;
+  padding: 8px;
+  text-align: center;
+  width: 10%;
 }
 html,
 body {
