Working in login page.

--- a/public/css/home.less
+++ b/public/css/home.less
@@ -38,15 +38,14 @@
 
         &:hover {
           input {
-            width: 80%;
-
-
+            width: 235px;
           }
         }
 
         input {
           background-color: rgba(0,0,0,0.2);
           border: none;
+          border-radius: 0;
           color: @font-color-accent;
           font-size: @font-size-regular;
           padding: 8px;
@@ -70,7 +69,6 @@
           color: @font-color-accent;
           padding: 8px;
           text-align: center;
-          width: 10%;
         }
       }
     }
