--- a/public/views/home.html
+++ b/public/views/home.html
@@ -9,7 +9,7 @@
                 </div>
                 <div class="email-input">
                     <input type="password" name="password" placeholder="password" ng-model="vm.user.password" ng-minlength="6" required/>
-                    <i class="pe-7s-key pe-lg pe-va"></i>
+                    <i class="pe-7s-key pe-lg pe-va pe-fw"></i>
                 </div>
                 <input class="btn btn-relos-trans-accent btn-block" type="submit" value="Submit" ng-disabled="form.$invalid"/>
             </form>
