--- a/public/css/style.css
+++ b/public/css/style.css
@@ -173,11 +173,12 @@ a:hover {
   margin-bottom: 10px;
 }
 #home-wrapper .login-wrapper form .email-input:hover input {
-  width: 80%;
+  width: 235px;
 }
 #home-wrapper .login-wrapper form .email-input input {
   background-color: rgba(0, 0, 0, 0.2);
   border: none;
+  border-radius: 0;
   color: #f9d406;
   font-size: 16px;
   padding: 8px;
@@ -199,7 +200,6 @@ a:hover {
   color: #f9d406;
   padding: 8px;
   text-align: center;
-  width: 10%;
 }
 html,
 body {
