--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,6 +1,7 @@
 <div ng-controller="HomeController as vm">
     <div id="home-wrapper">
         <div class="login-wrapper animated fadeIn">
+            <i class="pe-7s-joy pe-3x pe-va"></i>
             <span class="text-center text-thin text-size-huge">releet</span>
             <form name="form" class="form-group" ng-submit="vm.submit(vm.user)">
                 <div class="email-input">
