--- a/public/css/home.less
+++ b/public/css/home.less
@@ -6,6 +6,12 @@
   background-color: @primary-color;
   min-height: 100vh;
 
+  i:first-child {
+    color: @font-color-accent;
+    display: block;
+    text-align: center;
+  }
+
   .login-wrapper {
     display: inline-block;
     padding: 20px;
