--- a/public/views/navbar.html
+++ b/public/views/navbar.html
@@ -8,7 +8,7 @@
             </div>
             <div class="navigation-menu">
                 <span class="navigation-menu-icon animated fadeIn" ng-click="vm.toggleSideBar()">
-                    <i class="glyphicon glyphicon-option-vertical"></i>
+                    <i class="pe-7s-more pe-rotate-90 pe-lg pe-va"></i>
                 </span>
             </div>
         </div>
