--- a/public/css/style.css
+++ b/public/css/style.css
@@ -211,6 +211,16 @@ body {
   min-height: 100vh;
   padding: 0;
   margin: 0;
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
+  -o-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -webkit-perspective: 1000px;
+  -moz-perspective: 1000px;
+  -ms-perspective: 1000px;
+  -o-perspective: 1000px;
+  perspective: 1000px;
 }
 body {
   font-family: 'Roboto', sans-serif;
