--- a/public/css/navbar.less
+++ b/public/css/navbar.less
@@ -61,11 +61,11 @@
   width: 50%;
   background-color: @primary-color;
   z-index: 199;
-  -webkit-transition: all .4s ease;
-  -moz-transition: all .4s ease;
-  -ms-transition: all .4s ease;
-  -o-transition: all .4s ease;
-  transition: all .4s ease;
+  -webkit-transition: all .2s ease-in-out;
+  -moz-transition: all .2s ease-in-out;
+  -ms-transition: all .2s ease-in-out;
+  -o-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out;
 
   ul {
     list-style: none;
