--- a/public/css/home.less
+++ b/public/css/home.less
@@ -42,7 +42,7 @@
         border-radius: 4px;
         margin-bottom: 10px;
 
-        &:hover {
+        &:hover, &:focus, &:active {
           input {
             width: 235px;
           }
