--- a/public/css/style.css
+++ b/public/css/style.css
@@ -177,7 +177,9 @@ a:hover {
   border-radius: 4px;
   margin-bottom: 10px;
 }
-#home-wrapper .login-wrapper form .email-input:hover input {
+#home-wrapper .login-wrapper form .email-input:hover input,
+#home-wrapper .login-wrapper form .email-input:focus input,
+#home-wrapper .login-wrapper form .email-input:active input {
   width: 235px;
 }
 #home-wrapper .login-wrapper form .email-input input {
