Working on login

--- a/public/css/home.less
+++ b/public/css/home.less
@@ -44,7 +44,7 @@
 
         &:hover, &:focus, &:active {
           input {
-            width: 235px;
+            //width: 235px;
           }
         }
 
@@ -58,16 +58,16 @@
           border-right: 1px solid @accent-color;
           box-shadow: none;
           outline: none;
-          width: 0;
+          width: 80%;
 
-          -webkit-transition: all 0.2s;
-          -moz-transition: all 0.2s;
-          -ms-transition: all 0.2s;
-          -o-transition: all 0.2s;
-          transition: all 0.2s;
+          // -webkit-transition: all 0.2s;
+          // -moz-transition: all 0.2s;
+          // -ms-transition: all 0.2s;
+          // -o-transition: all 0.2s;
+          // transition: all 0.2s;
 
           &:focus, &:active {
-            width: 235px;
+            //width: 235px;
           }
         }
 
