Working on login

--- a/public/css/home.less
+++ b/public/css/home.less
@@ -5,6 +5,12 @@
   position: relative;
   background-color: @primary-color;
   min-height: 100vh;
+  
+  background: #49c0f0; /* Old browsers */
+  background: -moz-linear-gradient(-45deg, #49c0f0 0%, #097c9c 100%);
+  background: -webkit-linear-gradient(-45deg, #49c0f0 0%,#097c9c 100%);
+  background: linear-gradient(135deg, #49c0f0 0%,#097c9c 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#49c0f0', endColorstr='#097c9c',GradientType=1 );
 
   i:first-child {
     color: @font-color-accent;
