Working on login

--- a/public/css/global.less
+++ b/public/css/global.less
@@ -11,6 +11,26 @@ a {
 }
 
 
+a.accent-color {
+  color: @font-color-accent;
+
+
+  &:hover {
+    color: @font-color-light;
+    text-decoration: none;
+  }
+}
+
+
+a.primary-color {
+  color: @primary-color;
+
+
+  &:hover {
+    color: @font-color-accent;
+    text-decoration: none;
+  }
+}
 
 
 
