--- a/public/views/game-info.html
+++ b/public/views/game-info.html
@@ -16,7 +16,7 @@
                             </a>
                         </div>
                         <div class="media-body">
-                            <a target="_blank" href="http://www.xboxachievements.com/game/{{vm.gameXA.permalink}}/achievements/">
+                            <a class="primary-color" target="_blank" href="http://www.xboxachievements.com/game/{{vm.gameXA.permalink}}/achievements/">
                                 <h4 class="media-heading" ng-bind="vm.gameXA.title"></h4>
                                 </a>
                             <span><strong>Game Id: </strong>{{vm.gameXA.title}}</span><br/>
